fixed misaligned footer and navbar by removing ul li from Link

--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -2,20 +2,16 @@ footer {
   background-color: #33383e;
   position: absolute;
   width: 100vw;
-  ul {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 7vh;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 8vh;
 
-    li {
-      list-style: none;
-      .link {
-        text-decoration: none;
-        font-family: Montserrat-alternates, sans-serif;
-        color: whitesmoke;
-      }
-    }
+  .link {
+    list-style: none;
+    text-decoration: none;
+    font-family: Montserrat-alternates, sans-serif;
+    color: whitesmoke;
   }
 }
