--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .homepage {
   background-image: url('../images/houston.jpg');
-  height: 90vh;
+  height: 85vh;
   width: auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -13,20 +12,21 @@
     align-items: center;
     color: white;
     height: 90vh;
+
+    h1 {
+      font-size: 2rem;
+    }
+
     button {
       border: none;
       background-color: green;
-      height: 2rem;
-      width: auto;
+      height: 3rem;
+      width: 10rem;
       border-radius: 10%;
       color: whitesmoke;
-      font-family: Montserrat-alternates, sans-serif;
-    }
-    h1 {
-      font-family: Asap, sans-serif;
-    }
-    p {
-      font-family: Montserrat-alternates, sans-serif;
+      font-weight: bold;
+      font-size: 1rem;
+      margin-top: 1rem;
     }
   }
 }
