--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -1,23 +1,13 @@
 nav {
-  position: absolute;
   background-color: #33383e;
-  width: 100vw;
-  margin: 0;
-
-  ul {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 3rem;
+  .link {
+    list-style: none;
     text-decoration: none;
-    height: 5vh;
-    li {
-      margin: 0 2rem;
-      list-style: none;
-      .link {
-        text-decoration: none;
-        color: whitesmoke;
-        font-family: Montserrat-alternates, sans-serif;
-      }
-    }
+    color: whitesmoke;
+    font-family: Montserrat-alternates, sans-serif;
   }
 }
